# cargo-workspaces

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  renovate.json
.github/workflows/: ci.yml  release.yml
cargo-workspaces/: Cargo.toml
cargo-workspaces/src/: changed.rs  create.rs  exec.rs  init.rs  list.rs  main.rs  new.rs  owner.rs  plan.rs  publish.rs  rename.rs  version.rs
cargo-workspaces/src/utils/: basic_checks.rs  cargo.rs  changable.rs  config.rs  dag.rs  dev_dep_remover.rs  error.rs  git.rs  ins.rs  list.rs  listable.rs  mod.rs  pkg.rs  publish.rs  version.rs
cargo-workspaces/tests/: create.rs  exec.rs  init.rs  list.rs  new.rs  plan.rs  publish.rs  rename.rs  utils.rs
cargo-workspaces/tests/snapshots/: create__already_exists.snap  create__create_bin_2015-2.snap  create__create_bin_2015.snap  create__create_bin_2018.snap  create__create_lib_2015.snap  create__create_lib_2018.snap  create__create_lib_and_bin_fails.snap  create__duplicate_package_name.snap  create__exclude_fails.snap  create__member_glob-2.snap  create__member_glob.snap  exec__normal-2.snap  exec__normal.snap  exec__normal_ignore-2.snap  exec__normal_ignore.snap  init__no_path.snap  init__normal-2.snap  init__normal.snap  init__normal_with_manifest-2.snap  init__normal_with_manifest.snap  init__normal_with_manifest_initialized-2.snap  init__normal_with_manifest_initialized.snap  init__root-2.snap  init__root.snap  init__root_with_manifest-2.snap  init__root_with_manifest.snap  init__root_with_manifest_initialized-2.snap  init__root_with_manifest_initialized.snap  init__root_with_manifest_no_workspace-2.snap  init__root_with_manifest_no_workspace.snap  init__root_with_manifest_no_workspace_initialized-2.snap  init__root_with_manifest_no_workspace_initialized.snap  init__root_with_no_manifest-2.snap  init__root_with_no_manifest.snap  init__root_with_no_manifest_initialized.snap  init__with_manifest.snap  list__all.snap  list__json.snap.new  list__json_conflicts_with_long.snap  list__long.snap  (+9 more)
fixtures/create/: Cargo.toml
fixtures/create/dep1/: Cargo.toml
fixtures/create/dep2/: Cargo.toml
fixtures/normal/: Cargo.toml
fixtures/normal/dep1/: Cargo.toml
fixtures/normal/dep2/: Cargo.toml
fixtures/normal/top/: Cargo.toml
fixtures/normal_missing_fields/dep1/: Cargo.toml
fixtures/normal_missing_fields/dep2/: Cargo.toml
fixtures/normal_missing_fields/top/: Cargo.toml
fixtures/private/: Cargo.toml
fixtures/private/private/: Cargo.toml
fixtures/private/simple/: Cargo.toml
fixtures/root/: Cargo.toml
fixtures/single/: Cargo.toml
fixtures/single/simple/: Cargo.toml
src/: changed.rs  create.rs  exec.rs  list.rs  main.rs  publish.rs  version.rs
src/utils/: cargo.rs  changable.rs  error.rs  git.rs  listable.rs  mod.rs  pkg.rs  toml.rs  version.rs  writer.rs
