[package]
name = "cargo-workspaces"
version = "0.1.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
description = "Cargo workspace manager"
license = "MIT"
readme = "README.md"

[[bin]]
name = "cargo-workspaces"
path = "src/main.rs"

[[bin]]
name = "cargo-ws"
path = "src/main.rs"

[profile.release]
lto = "thin"

[dependencies]
clap = { version = "3.0.0-beta.1", git = "git://github.com/clap-rs/clap" }
cargo_metadata = "0.9"
termcolor = "1.1"
atty = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.3"
thiserror = "1"
