[package]
name = "cargo-workspaces"
version = "0.1.1"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
description = "Cargo workspace manager"
repository = "https://github.com/pksunkara/cargo-workspaces"
license = "MIT"

[[bin]]
name = "cargo-workspaces"
path = "src/main.rs"

[[bin]]
name = "cargo-ws"
path = "src/main.rs"
test = false

[profile.release]
lto = "thin"

[dependencies]
clap = "=3.0.0-beta.1"
cargo_metadata = "0.9"
semver = "0.9"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
thiserror = "1.0.16"
regex = "1.3.7"
glob = "0.3"
dialoguer = "0.6.1"
console = "0.11.2"
lazy_static = "1.4"
indexmap = "1.3"

[dev-dependencies]
assert_cmd = "1.0"
insta = { version = "0.16.0", features = ["redactions"] }
