[package]
name = "cargo-workspaces"
version = "0.2.32"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
description = "Cargo workspace manager"
repository = "https://github.com/pksunkara/cargo-workspaces"
license = "MIT"
readme = "README.md"
exclude = ["tests"]

[[bin]]
name = "cargo-workspaces"
path = "src/main.rs"

[[bin]]
name = "cargo-ws"
path = "src/../src/main.rs"
test = false
bench = false

[profile.release]
lto = "thin"

[dependencies]
clap = { version = "~3.1.12", features = ["derive", "wrap_help", "unstable-replace"] }
oclif = "0.4.0"
cargo_metadata = "0.13.1"
camino = "1.0.1"
semver = "0.11"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
thiserror = "1.0.16"
regex = "1.3.7"
glob = "0.3.0"
dialoguer = "0.9.0"
lazy_static = "1.4.0"
indexmap = "1.6.0"
crates-index = "0.18.1"
dunce = "1.0.1"

[dev-dependencies]
assert_cmd = "1.0"
insta = { version = "1.8.0", features = ["redactions"] }
indoc = "1.0.3"

[workspace.metadata.workspaces]
no_individual_tags = true
