[package]
name = "cargo-workspaces"
version = "0.2.44"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
description = "Cargo workspace manager"
repository = "https://github.com/pksunkara/cargo-workspaces"
license = "MIT"
readme = "README.md"
exclude = ["tests"]

[[bin]]
name = "cargo-workspaces"
path = "src/main.rs"

[[bin]]
name = "cargo-ws"
path = "src/../src/main.rs"
test = false
bench = false

[profile.release]
lto = "thin"

[dependencies]
clap = { version = "~3.1.12", features = ["derive", "wrap_help", "unstable-replace"] }
oclif = "0.4.0"
cargo_metadata = "0.13.1"
camino = "1.0.1"
semver = "0.11"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
regex = "1.9.5"
glob = "0.3.1"
globset = "0.4.13"
dialoguer = "0.9.0"
lazy_static = "1.4.0"
indexmap = "1.6.0"
crates-index = "0.19.7"
dunce = "1.0.4"
ctrlc = "3.4.1"
toml_edit = "0.19.10"

[dev-dependencies]
assert_cmd = "1.0"
insta = { version = "1.8.0", features = ["redactions"] }
indoc = "1.0.9"
tempfile = "3.6.0"

[workspace.metadata.workspaces]
no_individual_tags = true
